versioned_docs/version-4.0.x/reference/functions/Test-ADTNetworkConnection.mdx
---
id: Test-ADTNetworkConnection
title: Test-ADTNetworkConnection
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Tests for an active local network connection, excluding wireless and virtual network adapters.

## SYNTAX

```powershell
Test-ADTNetworkConnection [<CommonParameters>]
```

## DESCRIPTION

Tests for an active local network connection, excluding wireless and virtual network adapters, by querying the Win32_NetworkAdapter WMI class.
This function checks if any physical network adapter is in the 'Up' status.

## EXAMPLES

### EXAMPLE 1

```powershell
Test-ADTNetworkConnection
```

Checks if there is an active wired network connection and returns true or false.

## PARAMETERS

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### System.Boolean

### Returns $true if a wired network connection is detected, otherwise returns $false.
## NOTES
An active ADT session is NOT required to use this function.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2025 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[Test-ADTNetworkConnection](./Test-ADTNetworkConnection.mdx)
